# upstream-bot

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: check.yml
src/: cli.rs  db.rs  discord_bot.rs  main.rs  subcribe_issues.rs  subcribe_prs.rs  subcribe_releases.rs  types.rs  utils.rs
