[package]
name = "upstream-bot"
version = "0.1.0"
edition = "2021"
rust-version = '1.62'
authors = ['Manta Network']
homepage = 'https://manta.network'
license = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/upstream-bot/'

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = "0.4.21"
octocrab = "0.17.0"
serde = { version = "1.0.140", features = ["derive"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sled = "0.34.7"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.5"
url = "2.2.2"
