[package]
name = "upstream-subscriber-bot"
version = "0.1.0"
edition = "2021"
rust-version = '1.65'
authors = ['Manta Network']
homepage = 'https://manta.network'
license = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/upstream-bot/'

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.27", features =["derive"] }
chrono = "0.4.23"
octocrab = "0.17.0"
polars = "0.25.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sled = "0.34.7"
thiserror = "1.0.32"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.5"
